--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "openmobile": "^1.2.3",
     "react": "^18.3.1",
