--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "openmobile": "openmobile"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
@@ -18,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
